# autocutsel

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  PKGBUILD  README  README.md  autocutsel.1  autocutsel.1.in  autocutsel.c  autocutsel.spec  bootstrap  common.c  common.h  configure.ac  cutsel.1.in  cutsel.c
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
.obs/: workflows.yml
contrib/arch/: PKGBUILD
contrib/obs/: autocutsel.spec
contrib/rpm/: autocutsel.spec
contrib/systemd/: autocutsel@.service  clipboard.args  mouseonly.args  primary.args
debian/: autocutsel.install  changelog  control  rules
src/: autocutsel.c  common.c  common.h  cutsel.c
tests/: helpers.sh  test-cli.sh  test-cutsel.sh  test-instance.sh  test-modes.sh  test-no-display.sh  test-robustness.sh  test-sync.sh  test-unit.c  test-wayland.sh
